--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,9 +31,7 @@ jobs:
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 notecard/ example/ --count --ignore=E722,F401,F403,W503 --show-source --statistics
     - name: Test with pytest
       run: |
         pytest
