--- a/MAKEFILE
+++ b/MAKEFILE
@@ -7,7 +7,7 @@ default: test
 venv: $(VENV_NAME)/bin/activate
 
 test: venv
-	${PYTHON} -m flake8 test/ notecard/ example/ --count --ignore=E722,F401,F403,W503 --show-source --statistics
+	${PYTHON} -m flake8 test/ notecard/ examples/ --count --ignore=E722,F401,F403,W503 --show-source --statistics
 	${PYTHON} -m pytest test --cov=notecard
 
 coverage: venv
