--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,6 +32,9 @@ jobs:
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 test/ notecard/ examples/ --count --ignore=E722,F401,F403,W503 --show-source --statistics
+    - name: Lint Docs with Pydocstyle
+      run: |
+        pydocstyle notecard/ examples/
     - name: Test with pytest
       run: |
         pytest
