--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,3 +38,15 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Check if the job has succeeded
+      if: ${{ success() }}
+      run: |
+        curl --request POST \
+        --url 'https://api.notefile.net/?product=${{ secrets.NOTEHUB_PRODUCT_UID }}&device=${{ secrets.NOTECARD_DEVICE_ID }}' \
+        --header 'Content-Type: application/json' \
+        --header 'X-Session-Token: ${{ secrets.NOTEHUB_SESSION_TOKEN }}' \
+        --data '{"req":"note.add","file":"build_results.qi","body":{"result":"success_gh"}}'
+    - name: Chck if the job has failed
+      if: ${{ failure() }}
+      run: |
+        // CURL
