--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 pytest coveralls
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -52,6 +52,11 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@1.1.3
+      run: |
+        coverage run -m pytest
+        coveralls
     - name: Check if the job has succeeded
       if: ${{ success() }}
       run: |
