--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -55,6 +55,8 @@ jobs:
         coveralls
     - name: Coverage With Coveralls
       uses: coverallsapp/github-action@1.1.3
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Check if the job has succeeded
