clean up coverage action

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -50,12 +50,11 @@ jobs:
         --header 'X-Session-Token: ${{ secrets.NOTEHUB_SESSION_TOKEN }}' \
         --data '{"req":"note.add","file":"build_results.qi","body":{"result":"running_tests"}}'
     - name: Test with pytest
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         coverage run -m pytest
-    - name: Coverage With Coveralls
-      uses: coverallsapp/github-action@1.1.3
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        coveralls
     - name: Check if the job has succeeded
       if: ${{ success() }}
       run: |
