--- a/.github/workflows/manual-run.yml
+++ b/.github/workflows/manual-run.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 test/ notecard/ examples/ --count --ignore=E722,F401,F403,W503 --show-source --statistics
+        flake8 test/ notecard/ examples/ --count --ignore=E722,F401,F403,W503,E501 --show-source --statistics
     - name: Lint Docs with Pydocstyle
       run: |
         pydocstyle notecard/ examples/
