--- a/.github/workflows/manual-run.yml
+++ b/.github/workflows/manual-run.yml
@@ -8,10 +8,10 @@ on: workflow_dispatch
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: [3.9]
+        python-version: [3.8, 3.9]
 
     steps:
     - name: Send building notification
@@ -34,10 +34,12 @@ jobs:
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 test/ notecard/ examples/ --count --ignore=E722,F401,F403,W503 --show-source --statistics
+        make flake8
+        # flake8 test/ notecard/ examples/ --count --ignore=E722,F401,F403,W503,E501 --show-source --statistics
     - name: Lint Docs with Pydocstyle
       run: |
-        pydocstyle notecard/ examples/
+        make docstyle
+        # pydocstyle notecard/ examples/
     - name: Send running tests notification
       run: |
         curl --request POST \
@@ -47,7 +49,7 @@ jobs:
         --data '{"req":"note.add","file":"build_results.qi","body":{"result":"running_tests"}}'
     - name: Test with pytest
       run: |
-        pytest
+        make test
     - name: Check if the job has succeeded
       if: ${{ success() }}
       run: |
