--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -29,6 +29,9 @@ jobs:
         matrix:
           python-version: [3.6, 3.7, 3.8, 3.9]
 
+      env:
+        DD_API_KEY: ${{ secrets.DD_API_KEY }}
+
       steps:
       - name: Send building notification
         if: ${{ inputs.notehub_notify }}
@@ -63,10 +66,15 @@ jobs:
           --header 'Content-Type: application/json' \
           --header 'X-Session-Token: ${{ secrets.NOTEHUB_SESSION_TOKEN }}' \
           --data '{"req":"note.add","file":"build_results.qi","body":{"result":"running_tests"}}'
+
+      - name: Check DD API Key
+        if: ${{ !env.DD_API_KEY }}
+        run: |
+          echo Test run will NOT be collected by DD
+
       - name: Test with pytest
         env:
-          DD_API_KEY: ${{ secrets.DD_API_KEY }}
-          DD_CIVISIBILITY_AGENTLESS_ENABLED: ${{ !!secrets.DD_API_KEY }}
+          DD_CIVISIBILITY_AGENTLESS_ENABLED: ${{ !!env.DD_API_KEY }}
           DD_SERVICE: note-python
           DD_ENV: ci
         run: |
