--- a/.github/workflows/hil-circuitpython.yml
+++ b/.github/workflows/hil-circuitpython.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test:
-    runs-on: circuitpython
+    runs-on: [self-hosted, linux, circuitpython, swan-3.0, notecard-serial]
     defaults:
       run:
         shell: bash
@@ -21,18 +21,12 @@ jobs:
         flash_device: [true]
         lock_cpy_filesystem: [true]
     env:
-      # todo - move these to the runner .env file
-      SWAN_SERIAL: 2047315B5856
-      # path to the Swan's SWANBOOT drive
-      # the unique path the SWANBOOT drive is mouted at
-      # CPY_FS_UF2: /run/usbmount/usb-Adafruit_UF2_Bootloader_10001500035056584B313220-00_SWANBOOT
-      # CPY_FS_CIRCUITPY: /run/usbmount/usb-Blues_In_Swan_R5_7B4303088409002000000000-00-part1_CIRCUITPY
-      USB_MSD_ATTACH_TIME: 10
+      USB_MSD_ATTACH_TIME: 15
       CIRCUITPYTHON_UF2: "adafruit-circuitpython-swan_r5-en_US-${{ matrix.CIRCUITPYTHON_VERSION }}.uf2"
       CIRCUITPYTHON_VERSION: ${{ matrix.CIRCUITPYTHON_VERSION}}
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set Env Vars
         run: |
