fix: python venv doesn't carry over between steps, but does when run locally.

--- a/.github/workflows/hil-circuitpython.yml
+++ b/.github/workflows/hil-circuitpython.yml
@@ -122,6 +122,7 @@ jobs:
 
       - name: Run CircuitPython Tests
         run: |
+          . .venv-runner/bin/activate
           ${{ ! matrix.lock_cpy_filesystem }} && skipsetup=--skipsetup
           pytest $skipsetup "--productuid=$CPY_PRODUCT_UID" "--port=$CPY_SERIAL" --platform=circuitpython test/hitl
   
