fix: wait for uPy to complete initial setup.
```
b'Performing initial setup\r\nMicroPython v1.20.0 on 2023-04-26; ESP32 module with ESP32\r\nType "help()" for more information.\r\n>>> '

INTERNALERROR>     pyb.enter_raw_repl()
INTERNALERROR>   File "/home/mat/runners/notecard-nbgl-carr_f-huzzah32-serial/_work/note-python/note-python/test/hitl/deps/pyboard.py", line 367, in enter_raw_repl
INTERNALERROR>     raise PyboardError("could not enter raw repl")
INTERNALERROR> pyboard.PyboardError: could not enter raw repl
```

--- a/.github/workflows/hil-micropython.yml
+++ b/.github/workflows/hil-micropython.yml
@@ -78,6 +78,10 @@ jobs:
           esptool.py --chip esp32 --port ${MPY_SERIAL} --baud 460800 write_flash -z 0x1000 ${{ env.MICROPYTHON_BIN }}
           timeout 10 bash test/scripts/wait_for_file.sh "$MPY_SERIAL"
 
+          # wait for MicroPython to complete initial setup
+          echo "help()" >> "$MPY_SERIAL"
+          sleep 10
+
       - name: Run MicroPython Tests
         run: |
           . ${{ env.VENV }}/bin/activate
