Add cron schedule to hil-circuitpython.yml.

--- a/.github/workflows/hil-circuitpython.yml
+++ b/.github/workflows/hil-circuitpython.yml
@@ -21,6 +21,9 @@ on:
         type: boolean
         default: true
 
+  schedule:
+    - cron: '30 4 * * 1'
+
 jobs:
   test:
     runs-on: [self-hosted, linux, circuitpython, swan-3.0, notecard-serial]
