fix: drop support for Python 3.6, 3.7, and 3.8. Adds 3.10, 3.11, 3.12 and 3.13.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ iso8601==0.1.12
 pyserial==3.4
 python-periphery==2.3.0
 PyYAML==6.0.1
-flake8==3.8.3
+flake8==6.1.0
 pytest==7.0.1
 pytest-cov==2.8.1
 filelock==3.0.12
 pydocstyle==5.0.2
 packaging>=20.4
 pre-commit
+coveralls==3.3.1
+ddtrace==2.21.1
