--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -27,7 +27,7 @@ jobs:
       runs-on: ubuntu-24.04
       strategy:
         matrix:
-          python-version: [3.6, 3.7, 3.8, 3.9, 3.11]
+          python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
 
       env:
         DD_API_KEY: ${{ secrets.DD_API_KEY }}
@@ -43,13 +43,12 @@ jobs:
           --data '{"req":"note.add","file":"build_results.qi","body":{"result":"building"}}'
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -U flake8 pytest coveralls ddtrace
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Lint with flake8
         run: |
