fix: update pytest dependency

--- a/Pipfile
+++ b/Pipfile
@@ -13,12 +13,13 @@ pyserial = "==3.4"
 python-periphery = "==2.3.0"
 pyyaml = "==6.0.1"
 flake8 = "==6.1.0"
-pytest = "==7.0.1"
-pytest-cov = "==2.8.1"
+pytest = "==8.3.4"
 pydocstyle = "==5.0.2"
 packaging = ">=20.4"
 coveralls = "==3.3.1"
 ddtrace = "==2.21.1"
+pytest-cov = "*"
 build = "*"
 twine = "*"
 pre-commit = "*"
+exceptiongroup = "*"  # Python 3.9 & 3.10 compatibility with pytest
