--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Check version matches
       run: |
         # Extract version from pyproject.toml using Python
-        PACKAGE_VERSION=$(python -c "import tomli; print(tomli.loads(open('pyproject.toml', 'rb').read().decode('utf-8'))['project']['version'])")
+        PACKAGE_VERSION=$(python -c "import tomllib; print(tomllib.load(open('pyproject.toml', 'rb'))['project']['version'])")
         # Extract version from git tag (remove 'v' prefix)
         GIT_TAG_VERSION=${GITHUB_REF#refs/tags/v}
         # Compare versions
