--- a/.github/workflows/update-notecard-schema.yml
+++ b/.github/workflows/update-notecard-schema.yml
@@ -23,6 +23,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install pipenv
 
+      - name: Install dependencies
+        run: |
+          pipenv install --dev
+
       - name: Fetch schemas and generate Fluent API
         run: |
           echo "Updating from upstream commit: ${{ inputs.upstream_commit }}"
